[tool.poetry]
name = "repl_python3_Name-Color-Change"
version = "0.1.0"
description = ""
authors = ["MaliciousFiles <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
discord-ext-slash = "^0.5.0"
discord-py-slash-command = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"